optimize dto format